MIPS: Octeon: Define NR_CPUS_DEFAULT_32 for Cavium Octeon.
Signed-off-by: Chandrakala Chavva <cchavva@caviumnetworks.com>

--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -1446,6 +1446,8 @@ config CPU_CAVIUM_OCTEON
 	depends on SYS_HAS_CPU_CAVIUM_OCTEON
 	select CPU_HAS_PREFETCH
 	select CPU_SUPPORTS_64BIT_KERNEL
+	select SYS_SUPPORTS_SMP
+	select NR_CPUS_DEFAULT_32
 	select WEAK_ORDERING
 	select CPU_SUPPORTS_HIGHMEM
 	select CPU_SUPPORTS_HUGEPAGES
