--- a/arch/mips/cavium-octeon/Makefile
+++ b/arch/mips/cavium-octeon/Makefile
@@ -23,9 +23,11 @@ obj-y += executive/
 obj-y += crypto/
 
 obj-$(CONFIG_SMP)			+= smp.o
-obj-$(CONFIG_OCTEON_ILM)		+= oct_ilm.o
 obj-$(CONFIG_SYSFS)			+= octeon-power-throttle.o
-obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= octeon-nand.o
+obj-$(CONFIG_SYSFS)                     += cacheinfo.o
 obj-$(CONFIG_MTD)			+= flash_setup.o
+obj-$(CONFIG_OCTEON_ILM)		+= oct_ilm.o
+obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= octeon-nand.o
 obj-$(CONFIG_CAVIUM_OCTEON_ERROR_TREE)	+= octeon-error-tree.o
 obj-$(CONFIG_SYSFS)                     += cacheinfo.o
+obj-$(CONFIG_CAVIUM_OCTEON_KERNEL_CRYPTO) += octeon-crypto.o
