--- a/arch/mips/cavium-octeon/Makefile
+++ b/arch/mips/cavium-octeon/Makefile
@@ -6,7 +6,7 @@
 # License.  See the file "COPYING" in the main directory of this archive
 # for more details.
 #
-# Copyright (C) 2005-2009 Cavium Networks
+# Copyright (C) 2005-2012 Cavium, Inc.
 #
 
 CFLAGS_octeon-platform.o = -I$(src)/../../../scripts/dtc/libfdt
@@ -24,3 +24,4 @@ obj-$(CONFIG_MTD)		      += flash_setup.o
 obj-$(CONFIG_SMP)		      += smp.o
 obj-$(CONFIG_OCTEON_ILM)	      += oct_ilm.o
 obj-$(CONFIG_SYSFS)                   += octeon-power-throttle.o
+obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= octeon-nand.o
