--- a/drivers/of/Kconfig
+++ b/drivers/of/Kconfig
@@ -97,4 +97,11 @@ config OF_OVERLAY
 	  While this option is selected automatically when needed, you can
 	  enable it manually to improve device tree unit test coverage.
 
+config OF_MEMORY_ACCESSOR
+	def_bool y
+	depends on OF_I2C || OF_SPI
+	help
+	  OpenFirmware memory accessor support for accessing devices like
+	  i2c and SPI eeproms.
+
 endmenu # OF
