--- a/drivers/of/Makefile
+++ b/drivers/of/Makefile
@@ -19,3 +19,4 @@ obj-$(CONFIG_OF_UNITTEST) += unittest-data/
 
 CFLAGS_fdt.o = -I$(src)/../../scripts/dtc/libfdt
 CFLAGS_fdt_address.o = -I$(src)/../../scripts/dtc/libfdt
+obj-$(CONFIG_OF_MEMORY_ACCESSOR)	+= of_memory_accessor.o
