of: Add of_memory_accessor to map device tree node to memory accessor functions.
Currently there is no easy way to map a device tree node to a memory
accessor function for devices like I2C EEPROMs. For example, the Vitesse
vsc848x 10G PHY driver needs to be able to use the I2C at24 serial EEPROM
memory accessor function in order to read the SFP+ eeprom.

This provides a way where the vsc848x module can parse its device tree and
easily gain the accessor functions for the eeprom through a phandle.

This may be useful for any module which provides memory accessor functions.

Signed-off-by: Aaron Williams <aaron.williams@cavium.com>
Signed-off-by: Leonid Rosenboim <lrosenboim@caviumnetworks.com>

--- a/drivers/of/Kconfig
+++ b/drivers/of/Kconfig
@@ -83,4 +83,11 @@ config OF_RESERVED_MEM
 config OF_RESOLVE
 	bool
 
+config OF_MEMORY_ACCESSOR
+	def_bool y
+	depends on OF_I2C || OF_SPI
+	help
+	  OpenFirmware memory accessor support for accessing devices like
+	  i2c and SPI eeproms.
+
 endmenu # OF
