--- a/drivers/net/phy/Kconfig
+++ b/drivers/net/phy/Kconfig
@@ -35,7 +35,7 @@ config MARVELL_PHY
 	tristate "Drivers for Marvell PHYs"
 	---help---
 	  Currently has a driver for the 88E1011S
-	
+
 config DAVICOM_PHY
 	tristate "Drivers for Davicom PHYs"
 	---help---
@@ -60,6 +60,13 @@ config VITESSE_PHY
         tristate "Drivers for the Vitesse PHYs"
         ---help---
           Currently supports the vsc8244
+
+config VSC848X_PHY
+	tristate "Drivers for the Vitesse 10G PHYs"
+	depends on OF_MEMORY_ACCESSOR
+	help
+	  Driver for Vitesse vsc848x single, dual and quad 10G PHY devices.
+	  Currently supports the vsc8488, vsc8486 and vsc8484 chips
 
 config SMSC_PHY
 	tristate "Drivers for SMSC PHYs"
