--- a/arch/mips/cavium-octeon/Makefile
+++ b/arch/mips/cavium-octeon/Makefile
@@ -27,3 +27,4 @@ obj-$(CONFIG_SYSFS)			+= octeon-power-throttle.o
 obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= octeon-nand.o
 obj-$(CONFIG_MTD)			+= flash_setup.o
 obj-$(CONFIG_CAVIUM_OCTEON_ERROR_TREE)	+= octeon-error-tree.o
+obj-$(CONFIG_SYSFS)                     += cacheinfo.o
