MIPS: OCTEON: Add table driven handler for SoC error conditions.
These are grouped into somewhat functional groups.  The 'INTERNEL'
group of conditions is automatically enabled.

Subsequent patches will enable other functional group bits.

Signed-off-by: David Daney <david.daney@cavium.com>

--- a/arch/mips/cavium-octeon/executive/Makefile
+++ b/arch/mips/cavium-octeon/executive/Makefile
@@ -18,3 +18,4 @@ obj-y += cvmx-pko.o cvmx-spi.o cvmx-cmd-queue.o \
 
 obj-y += cvmx-helper-errata.o cvmx-helper-jtag.o
 obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= cvmx-nand.o
+obj-$(CONFIG_CAVIUM_OCTEON_ERROR_TREE)	+= cvmx-error-trees.o
