mips/kvm: Split up Kconfig and Makefile definitions in preperation for MIPS VZ.
Create the symbol KVM_MIPS_TE, and use it to select the trap and
emulate specific things.

Signed-off-by: David Daney <david.daney@cavium.com>
Acked-by: Ralf Baechle <ralf@linux-mips.org>

--- a/arch/mips/kvm/Makefile
+++ b/arch/mips/kvm/Makefile
@@ -13,3 +13,5 @@ kvm-objs := $(common-objs-y) mips.o emulate.o locore.o \
 
 obj-$(CONFIG_KVM)	+= kvm.o
 obj-y			+= callback.o tlb.o
+obj-$(CONFIG_KVM)		+= $(common-objs) kvm_mips.o
+obj-$(CONFIG_KVM_MIPS_TE)	+= kvm_mipste.o
