--- a/arch/mips/kvm/Kconfig
+++ b/arch/mips/kvm/Kconfig
@@ -20,7 +20,7 @@ config KVM
 
 config KVM_MIPS_TE
 	tristate "Kernel-based Virtual Machine (KVM) 32-bit trap-and-emulate"
-	depends on HAVE_KVM
+	depends on HAVE_KVM && 32BIT
 	select KVM
 	select ANON_INODES
 	select KVM_MMIO
@@ -46,6 +46,16 @@ config KVM_MIPS_DEBUG_COP0_COUNTERS
 	  shutdown.
 
 	  If unsure, say N.
+
+config KVM_MIPS_VZ
+	bool "Kernel-based Virtual Machine (KVM) using hardware MIPS-VZ support"
+	depends on HAVE_KVM && !FAST_ACCESS_TO_THREAD_POINTER
+	select KVM
+	select EXPORT_UASM
+	---help---
+	  Support for hosting Guest kernels on hardware with the
+	  MIPS-VZ hardware module.
+
 
 source drivers/vhost/Kconfig
 
