--- a/arch/mips/cavium-octeon/Kconfig
+++ b/arch/mips/cavium-octeon/Kconfig
@@ -224,6 +224,7 @@ config OCTEON_ERROR_INJECTOR
 	  Used to test hardware error reporting.  Should never be used
 	  in a normal running system.
 
-source "arch/mips/cavium-octeon/executive/Kconfig"
+# To be enabled later
+# source "arch/mips/cavium-octeon/executive/Kconfig"
 
 endif # CPU_CAVIUM_OCTEON
