usb: Add host driver for cn3XXX and cn5XXX SoCs
Signed-off-by: David Daney <david.daney@cavium.com>

--- a/arch/mips/cavium-octeon/executive/Makefile
+++ b/arch/mips/cavium-octeon/executive/Makefile
@@ -22,5 +22,7 @@ obj-y += cvmx-pko.o cvmx-spi.o cvmx-cmd-queue.o cvmx-helper-cfg.o	\
 	cvmx-helper-loop.o cvmx-helper-spi.o cvmx-helper-util.o
 
 obj-y += cvmx-helper-errata.o cvmx-helper-jtag.o
+
+obj-$(CONFIG_USB_OCTEON_HCD)		+= cvmx-usb.o
 obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= cvmx-nand.o
 obj-$(CONFIG_CAVIUM_OCTEON_ERROR_TREE)	+= cvmx-error-trees.o
