--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -58,7 +58,7 @@ menu "Machine selection"
 
 choice
 	prompt "System type"
-	default CAVIUM_OCTEON_REFERENCE_BOARD
+	default SGI_IP22
 
 config MIPS_ALCHEMY
 	bool "Alchemy processor based machines"
