Revert "MIPS: Make Cavium as the default configuration."
This reverts commit 08b2dc631eb46b3abf809e03733742422c620a2c.

--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -63,7 +63,7 @@ menu "Machine selection"
 
 choice
 	prompt "System type"
-	default CAVIUM_OCTEON_REFERENCE_BOARD
+	default SGI_IP22
 
 config MIPS_ALCHEMY
 	bool "Alchemy processor based machines"
