--- a/arch/mips/boot/dts/octeon_3xxx.dts
+++ b/arch/mips/boot/dts/octeon_3xxx.dts
@@ -552,7 +552,7 @@
 		};
 
 		usbn: usbn@1180068000000 {
-			compatible = "cavium,octeon-5750-usbn";
+			compatible = "cavium,octeon-6335-uctl";
 			reg = <0x11800 0x68000000 0x0 0x1000>;
 			ranges; /* Direct mapping */
 			#address-cells = <2>;
