--- a/arch/mips/cavium-octeon/Kconfig
+++ b/arch/mips/cavium-octeon/Kconfig
@@ -37,47 +37,6 @@ config FAST_ACCESS_TO_THREAD_POINTER
 	  the TLB fault handlers. This CVMSEG address isn't available to user
 	  applications.
 
-config CAVIUM_OCTEON_LOCK_L2
-	bool "Lock often used kernel code in the L2"
-	default "y"
-	help
-	  Enable locking parts of the kernel into the L2 cache.
-
-config CAVIUM_OCTEON_LOCK_L2_TLB
-	bool "Lock the TLB handler in L2"
-	depends on CAVIUM_OCTEON_LOCK_L2
-	default "y"
-	help
-	  Lock the low level TLB fast path into L2.
-
-config CAVIUM_OCTEON_LOCK_L2_EXCEPTION
-	bool "Lock the exception handler in L2"
-	depends on CAVIUM_OCTEON_LOCK_L2
-	default "y"
-	help
-	  Lock the low level exception handler into L2.
-
-config CAVIUM_OCTEON_LOCK_L2_LOW_LEVEL_INTERRUPT
-	bool "Lock the interrupt handler in L2"
-	depends on CAVIUM_OCTEON_LOCK_L2
-	default "y"
-	help
-	  Lock the low level interrupt handler into L2.
-
-config CAVIUM_OCTEON_LOCK_L2_INTERRUPT
-	bool "Lock the 2nd level interrupt handler in L2"
-	depends on CAVIUM_OCTEON_LOCK_L2
-	default "y"
-	help
-	  Lock the 2nd level interrupt handler in L2.
-
-config CAVIUM_OCTEON_LOCK_L2_MEMCPY
-	bool "Lock memcpy() in L2"
-	depends on CAVIUM_OCTEON_LOCK_L2
-	default "y"
-	help
-	  Lock the kernel's implementation of memcpy() into L2.
-
 choice
 	prompt "Allow User space to access hardware IO directly"
 	default CAVIUM_OCTEON_USER_IO_PER_PROCESS
@@ -135,6 +94,51 @@ config CAVIUM_OCTEON_USER_MEM_DISABLED
 	bool "Disabled"
 
 endchoice
+
+endif # CPU_CAVIUM_OCTEON
+
+if CAVIUM_OCTEON_SOC
+
+config CAVIUM_OCTEON_LOCK_L2
+	bool "Lock often used kernel code in the L2"
+	default "y"
+	help
+	  Enable locking parts of the kernel into the L2 cache.
+
+config CAVIUM_OCTEON_LOCK_L2_TLB
+	bool "Lock the TLB handler in L2"
+	depends on CAVIUM_OCTEON_LOCK_L2
+	default "y"
+	help
+	  Lock the low level TLB fast path into L2.
+
+config CAVIUM_OCTEON_LOCK_L2_EXCEPTION
+	bool "Lock the exception handler in L2"
+	depends on CAVIUM_OCTEON_LOCK_L2
+	default "y"
+	help
+	  Lock the low level exception handler into L2.
+
+config CAVIUM_OCTEON_LOCK_L2_LOW_LEVEL_INTERRUPT
+	bool "Lock the interrupt handler in L2"
+	depends on CAVIUM_OCTEON_LOCK_L2
+	default "y"
+	help
+	  Lock the low level interrupt handler into L2.
+
+config CAVIUM_OCTEON_LOCK_L2_INTERRUPT
+	bool "Lock the 2nd level interrupt handler in L2"
+	depends on CAVIUM_OCTEON_LOCK_L2
+	default "y"
+	help
+	  Lock the 2nd level interrupt handler in L2.
+
+config CAVIUM_OCTEON_LOCK_L2_MEMCPY
+	bool "Lock memcpy() in L2"
+	depends on CAVIUM_OCTEON_LOCK_L2
+	default "y"
+	help
+	  Lock the kernel's implementation of memcpy() into L2.
 
 config CAVIUM_RESERVE32
 	int "Memory to reserve for user processes shared region (MB)"
@@ -224,4 +228,4 @@ config OCTEON_ERROR_INJECTOR
 	  Used to test hardware error reporting.  Should never be used
 	  in a normal running system.
 
-endif # CPU_CAVIUM_OCTEON
+endif #CAVIUM_OCTEON_SOC
