MIPS: perf: octeon uncore events
Add support for the uncore (non-cpu) performance counters
of Cavium Octeon processors.

Each SoC has one or more Local Memory Controllers (LMC),
and Level-2 Cache Controllers (L2C).

Octeon1/1-Plus (cn3x/cn5x) have fixed-function LMC counters
accessed as _HI/_LO 32bit halves.
Octeon2/Oceton3 (cn6x/cn7x) access LMC counters as 64bit.

Octeon1(-plus) has 4 variable-function counters for L2C,
selectable across various events like the mips cpu perf counters.

Octeon2/3 have a collection of fixed-function counters on L2C,
plus 4 variable-function counters for each TagAndData (TAD) unit
attached to each L2C.

The fixed-function registers are polled here (UNC_DIRECT), and
variable-function counters (UNC_MAPPED events) are handled by callout
to cvmx executive functions shared with stand-alone environment.

Because kernel build is generic across several chips, and L2C/LMC
register count is dependent on boot-time LMC config options (1/2/4 banks),
each UNC_DIRECT event's properties are explored at runtime event->pmu->init(),
where register addresses, count & stride are saved in per-event structure.
Hence the periodic sampling calls to event->pmu->read() are simplified,
reducing sampling overhead.

To allow for easy extension to further non-cpu performance counters,
much of the per-event detail is captured in perf_uncore_events.h,
as a set ov EV() macro invocations passing all the properties of the event.
This file is included in multiple contexts, each with different EV() define.
I don't like this structure, but it was better than the alternative while code
was evolving.

Further development possibilities:
- Register some of the uncore_l2c events within perf's standard namespace
  (like LLC-loads, LLC-store-misses, full list shown by "perf list")

- Fix perf's event-name parser so event-names like uncore_l2c/store/ are
  allowed (currently "cycles", "store", "miss" and "ops" are reserved
  event names, even _within_ a subsystem/.../ construct)


--- a/arch/mips/cavium-octeon/Kconfig
+++ b/arch/mips/cavium-octeon/Kconfig
@@ -199,6 +199,13 @@ config CAVIUM_OCTEON_KERNEL_CRYPTO
 	  crypto state.  If OCTEON crypto instruction support is
 	  needed, select this option.
 
+config CAVIUM_OCTEON_PERF
+	bool "OCTEON-specific hardware performance counters"
+	default y
+	depends on PERF_EVENTS
+	help
+	  support extra performance counters, including L2 cache & DRAM controller
+
 config ARCH_SPARSEMEM_ENABLE
 	def_bool y
 	select SPARSEMEM_STATIC
