--- a/arch/mips/cavium-octeon/Makefile
+++ b/arch/mips/cavium-octeon/Makefile
@@ -17,7 +17,6 @@ obj-y := setup.o octeon-platform.o octeon-irq.o csrc-octeon.o \
 obj-y += dma-octeon.o
 obj-y += csrc-octeon-ptp.o
 obj-y += octeon-pci-console.o
-obj-y += perf_counters.o
 obj-y += octeon-memcpy.o
 obj-y += executive/
 
@@ -32,3 +31,5 @@ obj-$(CONFIG_SYSFS)                     += cacheinfo.o
 obj-$(CONFIG_CAVIUM_OCTEON_KERNEL_CRYPTO) += octeon-crypto.o
 obj-$(CONFIG_OCTEON_ERROR_INJECTOR)	+= octeon-error-injector.o
 obj-$(CONFIG_CAVIUM_OCTEON_RAPIDIO)	+= octeon-rapidio.o
+obj-$(CONFIG_PERF_EVENTS)		+= perf_counters.o
+obj-$(CONFIG_CAVIUM_OCTEON_PERF)	+= perf_uncore.o
