--- a/arch/mips/cavium-octeon/executive/Makefile
+++ b/arch/mips/cavium-octeon/executive/Makefile
@@ -29,4 +29,4 @@ obj-$(CONFIG_USB_OCTEON_HCD)		+= cvmx-usb.o
 obj-$(CONFIG_CAVIUM_OCTEON_RAPIDIO) 	+= cvmx-dma-engine.o
 obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= cvmx-bch.o cvmx-nand.o
 obj-$(CONFIG_CAVIUM_OCTEON_ERROR_TREE)	+= cvmx-error-trees.o
-obj-$(CONFIG_CAVIUM_GDB)		+= cvmx-debug.o cvmx-core.o cvmx-debug-handler.o cvmx-debug-uart.o cvmx-debug-remote.o
+obj-$(CONFIG_CAVIUM_GDB)		+= cvmx-debug.o cvmx-debug-handler.o cvmx-debug-uart.o cvmx-debug-remote.o
