--- a/arch/mips/cavium-octeon/Makefile
+++ b/arch/mips/cavium-octeon/Makefile
@@ -24,7 +24,7 @@ obj-y += crypto/
 obj-$(CONFIG_SMP)			+= smp.o
 obj-$(CONFIG_SYSFS)			+= octeon-power-throttle.o
 obj-$(CONFIG_SYSFS)                     += cacheinfo.o
-obj-$(CONFIG_MTD)			+= flash_setup.o
+obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= flash_setup.o
 obj-$(CONFIG_OCTEON_ILM)		+= oct_ilm.o
 obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= octeon-nand.o
 obj-$(CONFIG_CAVIUM_OCTEON_ERROR_TREE)	+= octeon-error-tree.o
