kvm tools, mips: Fix linkage of guest_init.o with octeon3 toolchain
[This error seems to be specific to octeon-sdk tool chain or the used
abi/march (or whatsoever).

Building lkvm with standard debian on mips (32-bit) just shows a warning

   LINK     guest/init
   LINK     lkvm
 /usr/bin/ld: guest/guest_init.o: warning: linking abicalls files with non-abicalls files
   LN       vm

but succeeds (using WERROR=0).
]

Add a script to ensure that elf header flags of binary blob
guest/guest_init.o match those of other object files before final
linking step. Otherwise we'll encounter link errors like:

 $ make V=1 ARCH=mips CROSS_COMPILE=mips64-octeon-linux-gnu- CPPFLAGS="-march=octeon3"
 mips64-octeon-linux-gnu-gcc -Wall ... -march=octeon3 -DCONFIG_MIPS ... mips/kvm.o mips/kvm-cpu.o mips/irq.o guest/guest_init.o -lrt -lpthread -lutil  -o lkvm
 mips64-octeon-linux-gnu/bin/ld: guest/guest_init.o: warning: linking abicalls files with non-abicalls files
 mips64-octeon-linux-gnu/bin/ld: guest/guest_init.o: linking 32-bit code with 64-bit code
 mips64-octeon-linux-gnu/bin/ld: failed to merge target specific data of file guest/guest_init.o
 collect2: error: ld returned 1 exit status
 make: *** [lkvm] Error 1
 $

Reason for this mess is that the step

  mips64-octeon-linux-gnu-ld  -r -b binary -o guest/guest_init.o guest/init

produces a binary which doesn't have e_flags set at all:

 $ file guest/guest_init.o
 guest/guest_init.o: ELF 64-bit MSB relocatable, MIPS, MIPS-I version 1 (SYSV), not stripped
 $ mips64-octeon-linux-gnu-readelf -a guest/guest_init.o | head -14
 ELF Header:
   Magic:   7f 45 4c 46 02 02 01 00 00 00 00 00 00 00 00 00
   Class:                             ELF64
   Data:                              2's complement, big endian
   Version:                           1 (current)
   OS/ABI:                            UNIX - System V
   ABI Version:                       0
   Type:                              REL (Relocatable file)
   Machine:                   

--- a/tools/kvm/Makefile
+++ b/tools/kvm/Makefile
@@ -184,6 +184,7 @@ ifeq ($(ARCH), arm64)
 	ARCH_WANT_LIBFDT := y
 endif
 
+# MIPS (octeon3)
 ifeq ($(ARCH),mips)
 	DEFINES		+= -DCONFIG_MIPS
 	ARCH_INCLUDE	:= mips/include
@@ -358,6 +359,9 @@ $(GUEST_INIT): guest/init.c
 	$(E) "  LINK    " $@
 	$(Q) $(CC) -static guest/init.c -o $@
 	$(Q) $(LD) $(LDFLAGS) -r -b binary -o guest/guest_init.o $(GUEST_INIT)
+ifeq ($(ARCH),mips)
+	$(Q) util/mips-fix-e_flags.sh
+endif
 
 $(DEPS):
 
