--- a/drivers/net/phy/Kconfig
+++ b/drivers/net/phy/Kconfig
@@ -137,6 +137,19 @@ config MICREL_PHY
 	---help---
 	  Supports the KSZ9021, VSC8201, KS8001 PHYs.
 
+config QCA833X_PHY
+	tristate "Drivers for Qualcomm/Atheros QCA833X PHYs"
+	depends on CAVIUM_OCTEON_SOC && MDIO_BUS_MUX
+	---help---
+	  Presents a Qualcomm/Atheros QCA8334/5/6/7 multi-port PHY as a
+	  single SGMII device. Does not enable advanced features, such as
+	  packet header reporting ingress port / steering egress port,
+	  or NAT.
+	  Link-state transitions require PSC cycling to undo hang,
+	  which is only implemented for CAVIUM_OCTEON_SOC.
+	  Non-standard MII_C45-like addressing is handled by creating virtual
+	  MDIO bus with MDIO_BUS_MUX.
+
 config FIXED_PHY
 	tristate "Driver for MDIO Bus/PHY emulation with fixed speed/link PHYs"
 	depends on PHYLIB
