MIPS: OCTEON: Add NUMA support for cn78XX
Create machine specific bootmem initialization, and add topology
functions.  This gets it to boot, but more changes needed to be able
to use devices on node-1.

Signed-off-by: David Daney <david.daney@cavium.com>

--- a/arch/mips/cavium-octeon/Makefile
+++ b/arch/mips/cavium-octeon/Makefile
@@ -21,6 +21,7 @@ obj-y += octeon-memcpy.o
 obj-y += executive/
 
 obj-$(CONFIG_SMP)			+= smp.o
+obj-$(CONFIG_NUMA)			+= octeon-numa.o
 obj-$(CONFIG_SYSFS)			+= octeon-power-throttle.o
 obj-$(CONFIG_SYSFS)                     += cacheinfo.o
 obj-$(CONFIG_MTD)			+= flash_setup.o
