MIPS: Octeon: Fix new coremask, hotplug CPU
From: David Daney <david.daney@cavium.com>

Update HOTPLUG_CPU code to handle new cvmx_coremask_t structures,
make the allocation of global hotplug memory atomic,
fix atomic modification of available_coremask.
Validate hot-plugging CPUs passed between Linux and SE app.

Signed-off-by: David Daney <david.daney@cavium.com>
Signed-off-by: Leonid Rosenboim <lrosenboim@caviumnetworks.com>
Signed-off-by: Abhishek Paliwal <abhishek.paliwal@aricent.com>

--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -723,6 +723,8 @@ config CAVIUM_OCTEON_SOC
     select MIPS_NR_CPU_NR_MAP_1024
 	select HOLES_IN_ZONE
 	select ARCH_REQUIRE_GPIOLIB
+	select NR_CPUS_DEFAULT_64
+	select MIPS_NR_CPU_NR_MAP_1024
 	help
 	  This option supports all of the Octeon reference boards from Cavium
 	  Networks. It builds a kernel that dynamically determines the Octeon
