Kconfig: add irq domain
Signed-off-by: Armin Kuster <akuster808@gmail.com>

--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -847,6 +847,7 @@ config CAVIUM_OCTEON_SOC
 	select SYS_SUPPORTS_SMP
 	select NR_CPUS_DEFAULT_16
 	select BUILTIN_DTB
+    select HANDLE_DOMAIN_IRQ
 	select MTD_COMPLEX_MAPPINGS
 	help
 	  This option supports all of the Octeon reference boards from Cavium
