--- a/arch/mips/include/asm/Kbuild
+++ b/arch/mips/include/asm/Kbuild
@@ -1,6 +1,7 @@
 # MIPS headers
 generic-(CONFIG_GENERIC_CSUM) += checksum.h
 generic-y += cputime.h
+generic-y += irq_regs.h
 generic-y += current.h
 generic-y += dma-contiguous.h
 generic-y += emergency-restart.h
