--- a/drivers/net/ethernet/cavium/Kconfig
+++ b/drivers/net/ethernet/cavium/Kconfig
@@ -51,4 +51,5 @@ config LIQUIDIO
 	  To compile this driver as a module, choose M here: the module
 	  will be called liquidio.  This is recommended.
 
+source "drivers/net/ethernet/cavium/octeon/Kconfig"
 endif # NET_VENDOR_CAVIUM
