--- a/drivers/net/ethernet/cavium/Makefile
+++ b/drivers/net/ethernet/cavium/Makefile
@@ -3,4 +3,4 @@
 #
 obj-$(CONFIG_NET_VENDOR_CAVIUM) += thunder/
 obj-$(CONFIG_NET_VENDOR_CAVIUM) += liquidio/
-obj-$(CONFIG_NET_VENDOR_CAVIUM) += cavium/
+obj-$(CONFIG_NET_VENDOR_CAVIUM) += octeon/
