sata: add support
Signed-off-by: Armin Kuster <akuster808@gmail.com>

--- a/drivers/ata/Kconfig
+++ b/drivers/ata/Kconfig
@@ -206,6 +206,11 @@ config SATA_SIL24
 
 	  If unsure, say N.
 
+config SATA_OCTEON
+	tristate
+	depends on SATA_AHCI_PLATFORM && CAVIUM_OCTEON_SOC
+	default y
+
 config ATA_SFF
 	bool "ATA SFF support (for legacy IDE and PATA)"
 	default y
